<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/title"
         android:id="@+id/teamtext"
         android:gravity="center"
         android:layout_margin="30dp"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="#7fc3f0">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/teamtext"
        android:id="@+id/linear"
        android:background="#fff"
        android:gravity="center">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/dest"
            android:src="@drawable/img">
        </ImageView>
    </LinearLayout>
    <TextView
        android:layout_width="250dp"
        android:id="@+id/content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:text="@string/cont1"
        android:textColor="#7fc3f0"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@+id/content"
        android:hint="@string/hint"
        android:inputType="textEmailAddress"
        android:textColor="#7fcf0"
        android:textColorHint="#030303"
        android:layout_margin="30dp"
        android:background="#F5F6F3"
        android:padding="15dp"
        android:autofillHints="@string/hin" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginHorizontal="40dp"
        android:id="@+id/btnSn"
        android:text="@string/btn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bt">
    </Button>
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSn"
        android:id="@+id/help"
        android:text="@string/cont2"
        android:textColor="#7fc3f0"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textAlignment="center">
    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help"
        android:layout_marginHorizontal="40dp"
        android:id="@+id/meeting"
        android:text="@string/meetbtn"
        android:layout_marginVertical="10dp"
        android:textColor="#7fc3f0"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_button">
    </Button>

    <Button
        android:id="@+id/ms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/meeting"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/border_button"
        android:drawableStart="@drawable/ic_mic"
        android:paddingStart="85dp"
        android:paddingEnd="70dp"
        android:text="@string/sig"
        android:textColor="#7fc3f0"
        android:textAlignment="center">
    </Button>

</RelativeLayout>